Work on mobile fixes...

--- a/app/assets/stylesheets/calculator.scss
+++ b/app/assets/stylesheets/calculator.scss
@@ -189,13 +189,15 @@ div.jumbotron.wider {
  */
 
 .slider {
-  width: 200px;
+  width: 100%;
 }
+/*
 @media screen and (max-device-width: 1024px) {
   input.slider {
-    width: 100px;
+    width: 100%;
   }
 }
+*/
 
 /*
  * Footer
